# metapackages

desktop/: CMakeLists.txt  package.xml
desktop_full/: CMakeLists.txt  package.xml
mobile/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  package.xml
pr2/: CMakeLists.txt  package.xml
pr2_base/: CMakeLists.txt  package.xml
pr2_desktop/: CMakeLists.txt  package.xml
robot/: CMakeLists.txt  package.xml
ros_base/: CMakeLists.txt  package.xml
ros_core/: CMakeLists.txt  package.xml
ros_full/: CMakeLists.txt  package.xml
simulators/: CMakeLists.txt  package.xml
viz/: CMakeLists.txt  package.xml
