<package>
  <name>desktop</name>
  <version>1.2.0</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot</run_depend>
  <run_depend>viz</run_depend>

  <run_depend>common_tutorials</run_depend>
  <run_depend>geometry_tutorials</run_depend>
  <run_depend>ros_tutorials</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>rqt_common_plugins</run_depend>
  <run_depend>rqt_robot_plugins</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>visualization_tutorials</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
