<package>
  <name>desktop</name>
  <version>1.2.1</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot</run_depend>
  <run_depend>viz</run_depend>

  <run_depend>angles</run_depend>
  <run_depend>common_tutorials</run_depend>
  <run_depend>geometry_tutorials</run_depend>
  <run_depend>ros_tutorials</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>visualization_tutorials</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
