<package>
  <name>desktop_full</name>
  <version>1.3.1</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>desktop</run_depend>
  <run_depend>perception</run_depend>
  <run_depend>simulators</run_depend>

  <run_depend>urdf_sim_tutorial</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
