<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>desktop_full</name>
  <version>1.4.1</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>desktop</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>simulators</exec_depend>

  <exec_depend>urdf_sim_tutorial</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
