<package>
  <name>mobile</name>
  <version>1.0.2</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>bfl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>laser_pipeline</run_depend>
  <run_depend>navigation</run_depend>
  <run_depend>perception_pcl</run_depend>
  <run_depend>robot</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
