<package>
  <name>perception</name>
  <version>1.3.1</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_base</run_depend>

  <run_depend>image_common</run_depend>
  <run_depend>image_pipeline</run_depend>
  <run_depend>image_transport_plugins</run_depend>
  <run_depend>laser_pipeline</run_depend>
  <run_depend>perception_pcl</run_depend>
  <run_depend>vision_opencv</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
