<package>
  <name>pr2</name>
  <version>1.0.0</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>audio_common</run_depend>
  <run_depend>camera_drivers</run_depend>
  <run_depend>imu_drivers</run_depend>
  <run_depend>joystick_drivers</run_depend>
  <run_depend>laser_drivers</run_depend>
  <run_depend>linux_networking</run_depend>
  <run_depend>pr2_base</run_depend>
  <run_depend>pr2_ethercat_drivers</run_depend>
  <run_depend>pr2_navigation_apps</run_depend>
  <run_depend>pr2_power_drivers</run_depend>
  <run_depend>pr2_robot</run_depend>
  <run_depend>prosilica_driver</run_depend>
  <run_depend>wge100_driver</run_depend>
  <run_depend>wifi_drivers</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
