<package>
  <name>pr2_base</name>
  <version>1.0.0</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>control</run_depend>
  <run_depend>geometry_experimental</run_depend>
  <run_depend>joystick_drivers</run_depend>
  <run_depend>mobile</run_depend>
  <run_depend>object_manipulation</run_depend>
  <run_depend>perception</run_depend>
  <run_depend>perception_pcl</run_depend>
  <run_depend>pr2_apps</run_depend>
  <run_depend>pr2_calibration</run_depend>
  <run_depend>pr2_common</run_depend>
  <run_depend>pr2_common_actions</run_depend>
  <run_depend>pr2_controllers</run_depend>
  <run_depend>pr2_kinematics</run_depend>
  <run_depend>pr2_mechanism</run_depend>
  <run_depend>pr2_navigation</run_depend>
  <run_depend>pr2_object_manipulation</run_depend>
  <run_depend>ros_realtime</run_depend>
  <run_depend>sql_database</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>web_interface</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
