<package>
  <name>robot</name>
  <version>1.1.5</version>
  <description>A metapackage which extends ros_base and includes ROS libaries for any robot hardware. It may not contain any GUI dependencies.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_base</run_depend>

  <run_depend>control_msgs</run_depend>
  <run_depend>diagnostics</run_depend>
  <run_depend>executive_smach</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>robot_model</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
