<package>
  <name>ros_full</name>
  <version>1.0.2</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_base</run_depend>
  <run_depend>rosdoc_lite</run_depend>
  <run_depend>rqt_common_plugins</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
