<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>simulators</name>
  <version>1.1.6</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot</exec_depend>

  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rqt_common_plugins</exec_depend>
  <exec_depend>rqt_robot_plugins</exec_depend>
  <exec_depend>stage_ros</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
