<package>
  <name>viz</name>
  <version>1.1.3</version>
  <description>A metapackage to aggregate several packages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/ros/metapackages</url>
  <url type="bugtracker">https://github.com/ros/metapackages/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_base</run_depend>

  <run_depend>rqt_common_plugins</run_depend>
  <run_depend>rqt_robot_plugins</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
